# pgw-scada

./: CMakeLists.txt  Main.qml  PgwBackend.h  README.md  main.cpp
app/: pgw_server  pgw_server.json  test_load_udp
qml/: DashboardPage.qml  InfoRow.qml  Main.qml  MetricCard.qml
resources/: resources.qrc
src/: PgwBackend.cpp  PgwBackend.h  TcpClient.cpp  TcpClient.h  TcpSerializer.cpp  TcpSerializer.h  main.cpp  protocol.h
